<resources>
    <string name="app_name" translatable="false">Haven</string>
    <string name="bullets" translatable="false">•••••••</string>
    <string name="menu_save">Save</string>
    <string name="menu_about">Setup…</string>
    <string name="title_activity_start">Haven</string>
    <string name="accelerometer_prompt">Movement Sensitivity</string>
    <string name="microphone_sensitivity">Sound Sensitivity</string>
    <string name="timer_delay_label">Set Delay Time</string>
    <string name="remote_notification_label">
    	Send Signal message alerts
    </string>
    <string name="sms_hint">+12125551212</string>
    <string name="camera_prompt">Select the camera</string>
    <string name="secure_service_started">Haven Activated</string>
    <string name="intrusion_detected">A Haven sensor was triggered (Type: %s)</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="intro1_title">Welcome to Haven</string>
    <string name="intro1_desc">\"Now when the ark of human fate,\nLong baffled by the wayward wind,\nIs drifting with its peopled freight,\nSAFE HAVEN on the height find...\"\n-George Meredith</string>
    <string name="intro2_title">Haven is for people who want to keep an eye out for intrusions into their home, office, hotel room or other private space</string>
    <string name="intro3_desc">Turn an extra phone into a motion, sound, vibration and light detector, watching for unexpected guests and unwanted intruders</string>
    <string name="intro4_desc">Get notified of intrusion events instantly and access the logs remotely or in-person later</string>
    <string name="intro5_title">Your Haven is ready</string>
    <string name="intro5_desc">Activate the app at anytime using the &gt; action button on the main screen</string>
    <string name="onboarding_action_end">Finish</string>
    <string name="remote_access">Remote Access</string>
    <string name="remote_access_label">Enable remote access via Tor Onion Service</string>
    <string name="remote_access_hint">Onion service address from Orbot</string>
    <string name="remote_access_credential_hint">Set remote password</string>
    <string name="camera_front">Front</string>
    <string name="camera_back">Back</string>
    <string name="camera_none">None</string>
    <string name="action_configure">Configure</string>
    <string name="main_screen_title">Your Haven Log</string>
    <string name="current_noise_base">Current noise level is</string>
    <string name="current_accel_base">Current motion level is</string>
    <string name="configure_trigger_level">Slide to set detection threshold</string>
    <string name="tune_the_sound_detection">Make some noise!</string>
    <string name="set_your_phone_on_the_table_and_make_noises_in_the_room_to_find_the_right_level_to_detect">Set your phone on the table, and make noises in the room to find the right level to detect</string>
    <string name="tune_the_accel_detection">Shake it up!</string>
    <string name="tune_the_accel_detection_more">Move your phone around to tune the motion detection threshold</string>
    <string name="set_a_countdown_time">Tap to change countdown</string>
    <string name="start_now">Start Now</string>
    <string name="start_later">View Logs</string>
    <string name="save_number">Save Number</string>
    <string name="action_cancel">Deactivate</string>
    <string name="status_on">ACTIVE</string>
    <string name="power_source_status_usb">USB Charging</string>
    <string name="power_source_status_wireless">Wireless Charging</string>
    <string name="power_source_status_ac">AC Charging</string>
    <string name="power_source_status">STATE:</string>
    <string name="power_disconnected">Disconnected</string>
    <string name="you_will_receive_a_text_when_the_app_hears_or_sees_something">You will receive a text when the app hears or sees something</string>
    <string name="know_immediately_when_haven_detects_something">Know immediately when Haven detects something</string>
    <string name="phone_saved">Phone number saved!</string>
    <string name="detection_events">detection events</string>
    <string name="data_speed">SPEED</string>
    <string name="data_light">LIGHT</string>
    <string name="data_pressure">PRESSURE</string>
    <string name="data_power">POWER</string>
    <string name="data_battery">BATTERY</string>
    <string name="share_event_action">Share event...</string>
    <string name="signal_test_message">This is a test message from Haven</string>
    <string name="send_test_message">Send Test Message</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="activate_signal">Activate Signal</string>
    <string name="verify_signal">Verify Signal</string>
    <string name="verify_signal_by_phone">Call me instead</string>
    <string name="enter_verification">Enter the verification code you received from the Signal registration step</string>
    <string name="cancel">Cancel</string>
    <string name="register_title">Register with Signal</string>
    <string name="register_signal_desc">Enter a phone number to register with Signal, to use to send secure notifications. You can use this device\'s phone number or setup a virtual number.\n\nWARNING: If this number is already configured with a Signal app install, it will stop working there, and only work within Haven.</string>
    <string name="phone_hint">+12125551212</string>
    <string name="menu_licenses">Licenses…</string>
    <string name="sensor_light">Ambient Light</string>
    <string name="sensor_accel">Motion (Accelerometer)</string>
    <string name="sensor_camera">Motion (Camera)</string>
    <string name="sensor_sound">Microphone</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_bump">Bump (Accelerometer)</string>
    <string name="sensor_camera_video">Motion (Video)</string>
    <string name="sensor_heartbeat">Heartbeat</string>
    <string name="sensor_unknown">Unknown</string>
    <string name="settings">Settings</string>
    <string name="remote_access_onion_error">This feature requires the Orbot: Tor for Android app to be installed.</string>
    <string name="hint_number" translatable="false">+12125551212</string>
    <string name="sms_dialog_summary">Remote phone number to send notifications to</string>
    <string name="sms_dialog_message">Enter a remote phone number to send alert notifications to</string>
    <string name="signal_dialog_summary">A phone number to send from using Signal</string>
    <string name="verification_dialog_summary">Tap to verify your Signal number</string>
    <string name="verification_dialog_summary_verified">Signal number is verified</string>
    <string name="send_message_dialog">Enter a phone number to send a test alert notification message to</string>
    <string name="send_text_message">Test notifications…</string>
    <string name="service_address">Service Address</string>
    <string name="password">Password (Required)</string>
    <string name="signal_number">Signal Number (Local)</string>
    <string name="phone_number">Notification Number (Remote)</string>
    <string name="sensors">Sensors</string>
    <string name="label_notifications">Notifications</string>
    <string name="video_active_preference_key" translatable="false">video_active_preference_key</string>
    <string name="config_video_length_label">Set Video Monitoring Length</string>
    <string name="video_monitoring">Video Monitoring</string>
    <string name="video_settings">Video Settings</string>
    <string name="camera_sensitivity">Camera Sensitivity</string>
    <string name="notification_time">Notification Time Interval</string>
    <string name="notification_time_summary">Only send notifications at configured interval</string>
    <string name="notification_time_dialog">Enter time (minutes) to limit notifications. \'0\' to send every notification.</string>
    <string name="minutes">minute(s)</string>
    <string name="keep_watch">Keep Watch!</string>
    <string name="camera_sensitivity_tip">Use slider to adjust motion detection sensitivity, with a goal of 0% when there is no motion.</string>
    <string name="disable_battery_opt_title">Disable Battery Optimizations</string>
    <string name="disable_battery_opt_summary">Allow app to run when screen is off</string>
    <string name="event_deleted">Event deleted</string>
    <string name="undo">UNDO</string>
    <string name="remove_all_logs">Remove all logs</string>
    <string name="events_deleted">Events deleted</string>
    <string name="hearbeat_monitor">Haven Heartbeat Monitor</string>
    <string name="hearbeat_monitor_enable">Enable Heartbeat Alert</string>
    <string name="hearbeat_monitor_summary">Checkup Interval</string>
    <string name="heartbeat_time_dialog">Enter time (minutes) to send battery % and a single-character heart emoji. Alerts cease when Haven stops monitoring for any reason.</string>
    <string name="hearbeat_monitor_dialog">Configure delay between alerts</string>
    <string name="hearbeat_message_dialog">Customize message sent for heartbeat notifications. Leave blank to use default heart emoji</string>
    <string name="hearbeat_message_title">Alert Message</string>
    <string name="hearbeat_message_summary">Set custom message text</string>
    <string name="hearbeat_message_summary_on">Custom alerts enabled</string>
    <string name="hearbeat_monitor_initial_message_1">Heartbeat monitor activate: You will receive a notification every</string>
    <string name="hearbeat_monitor_initial_message_2">minute(s) Haven is active &amp; monitoring.</string>
    <string name="battery_level_msg_text">Battery Level</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="config_storage_path">Storage Folder Path</string>
    <string name="config_storage_page_hint">Where captured media is stored</string>
    <string name="event_trigger_deleted">Event Trigger deleted</string>
    <string name="please_wait">Please wait</string>
    <string name="migrating_data">Looking for your old data</string>
    <string name="path_chars">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-_/</string>
    <string name="motion_detected">MOTION DETECTED</string>
    <string name="sound_detected">SOUND DETECTED</string>
    <string name="device_move_detected">DEVICE MOVEMENT DETECTED</string>
    <string name="power_detected">POWER CHANGE DETECTED</string>
    <string name="status_recording_video">Recording…</string>
    <string name="status_light">LIGHT DETECTED</string>
    <string name="registering_to_signal">Registering to Signal</string>
    <string name="signal_registration_desc">Please wait while we register you to Signal services</string>
    <string name="verifying_signal">Verifying</string>
    <string name="verifying_signal_desc">Please wait while we verify your registration to Signal services</string>
    <string name="ok">Ok</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="signal_reg_success_desc">You have successfully registered to Signal services. Next Step is to verify the registration for %s</string>
    <string name="verification_successful">Verification Successful</string>
    <string name="signal_verification_success_desc">All set to send Haven alerts from Signal!</string>
    <string name="setup_signal_toast">Please set up Signal notifications from settings</string>
    <string name="reset_signal_configuration">Reset Signal Configuration</string>
    <string name="reset_configuration_question">Reset Signal Configuration?</string>
    <string name="simultaneous_image_monitoring">Simultaneous Image Monitoring</string>
    <string name="simultaneous_image_monitoring_summary">Keep on image monitoring along with video monitoring. This will stop the camera preview</string>
</resources>