<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Preference
        app:iconSpaceReserved="false"
        android:key="config_delay_time"
        android:title="@string/timer_delay_label" />

    <EditTextPreference
        app:iconSpaceReserved="false"
        android:dialogLayout="@layout/pref_dialog_edit_text"
        android:dialogMessage="@string/config_storage_page_hint"
        android:key="config_base_storage"
        android:summary="@string/config_storage_page_hint"
        android:title="@string/config_storage_path"
        android:defaultValue="/haven"
        android:digits="@string/path_chars"
        />

    <Preference
        app:iconSpaceReserved="false"
        android:key="config_battery_optimizations"
        android:title="@string/disable_battery_opt_title"
        android:summary="@string/disable_battery_opt_summary"/>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/video_settings">
        <Preference
            app:iconSpaceReserved="false"
            android:key="config_video_length"
            android:title="@string/config_video_length_label" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="@string/video_active_preference_key"
            android:title="@string/video_monitoring"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="simultaneous_image_monitoring"
            android:summary="@string/simultaneous_image_monitoring_summary"
            android:title="@string/simultaneous_image_monitoring"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/sensors">

        <ListPreference
            app:iconSpaceReserved="false"
            android:entries="@array/camera"
            android:entryValues="@array/camera_alias"
            android:key="camera"
            android:summary="%s"
            android:title="@string/camera_prompt" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="camera_sensitivity"
            android:title="@string/camera_sensitivity" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="config_sound"
            android:title="@string/microphone_sensitivity" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="config_movement"
            android:title="@string/accelerometer_prompt" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/label_notifications">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="remote_notification_active"
            android:title="@string/remote_notification_label" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text_hint"
            android:dialogMessage="@string/sms_dialog_message"
            android:inputType="phone"
            android:key="sms_number"
            android:summary="@string/sms_dialog_summary"
            android:title="@string/phone_number" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text_hint_signal"
            android:dialogMessage="@string/register_signal_desc"
            android:inputType="phone"
            android:key="register_signal"
            android:summary="@string/signal_dialog_summary"
            android:title="@string/signal_number" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/enter_verification"
            android:inputType="number"
            android:key="verify_signal"
            android:summary="@string/verification_dialog_summary"
            android:title="@string/verify_signal" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/notification_time_dialog"
            android:inputType="number"
            android:key="notification_time"
            android:summary="@string/notification_time_summary"
            android:title="@string/notification_time" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="reset_signal_config"
            android:title="@string/reset_signal_configuration" />

    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/hearbeat_monitor">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="heartbeat_monitor_active"
            android:title="@string/hearbeat_monitor_enable" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/heartbeat_time_dialog"
            android:inputType="number"
            android:key="heartbeat_monitor_delay"
            android:summary="@string/hearbeat_monitor_dialog"
            android:title="@string/hearbeat_monitor_summary"/>

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/hearbeat_message_dialog"
            android:inputType="text"
            android:key="heartbeat_monitor_message"
            android:title="@string/hearbeat_message_title"
            android:summary="@string/hearbeat_message_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/remote_access">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="remote_access_active"
            android:summary="@string/remote_access_label"
            android:title="@string/remote_access" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/remote_access_hint"
            android:key="remote_access_onion"
            android:summary="@string/remote_access_hint"
            android:title="@string/service_address" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_password"
            android:dialogMessage="@string/remote_access_credential_hint"
            android:inputType="textPassword"
            android:key="remote_access_credential"
            android:summary="@string/remote_access_credential_hint"
            android:title="@string/password" />
    </PreferenceCategory>

</PreferenceScreen>
