<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_test_notification"
        android:orderInCategory="100"
        android:title="@string/send_text_message"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_licenses"
        android:orderInCategory="100"
        android:title="@string/menu_licenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_all_events"
        android:title="@string/remove_all_logs"
        app:showAsAction="never" />

</menu>
