<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay" />
    app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6sp">

            <TextView
                android:id="@+id/camera_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingTop="10dp"
                android:text="@string/camera_prompt" />
            <!--
            <Spinner
                android:id="@+id/camera_spinner"
                android:layout_alignParentRight="true"
                android:prompt="@string/camera_prompt"
                android:entries="@array/select_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                />-->
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_camera_front"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/camera_front" />

                <RadioButton
                    android:id="@+id/radio_camera_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/camera_back" />

                <RadioButton
                    android:id="@+id/radio_camera_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/camera_none" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"

                >


                <TextView
                    android:id="@+id/microphone_prompt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/microphone_sensitivity" />

                <Button
                    android:id="@+id/action_configure_mic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/action_configure" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"

                >


                <TextView
                    android:id="@+id/accelerometer_prompt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/accelerometer_prompt" />

                <Button
                    android:id="@+id/action_configure_accel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/action_configure" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timer_label"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_delay_label" />

                <Button
                    android:id="@+id/action_configure_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_configure" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/sms_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sms_label"
                tools:context="org.havenapp.main.SettingsActivity" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/sms_hint"
                android:inputType="phone"
                android:paddingTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"

                >

                <TextView
                    android:id="@+id/label_signal"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/activate_signal" />

                <Button
                    android:id="@+id/action_register_signal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/action_verify_signal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"

                >

                <TextView
                    android:id="@+id/label_signal_status"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="" />

                <Button
                    android:id="@+id/action_test_signal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_test_message"
                    android:visibility="gone" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/remote_access_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_access_label"
                tools:context="org.havenapp.main.SettingsActivity" />

            <EditText
                android:id="@+id/remote_access_onion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/remote_access_hint"
                tools:context="org.havenapp.main.SettingsActivity" />

            <EditText
                android:id="@+id/remote_access_credential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/remote_access_credential_hint"
                android:inputType="textPassword"
                tools:context="org.havenapp.main.SettingsActivity" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>