<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"> 

<LinearLayout
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:padding="6sp"
	>
	

    	<TextView 
    	    android:id="@+id/accelerometer_prompt"
    	    android:text="@string/accelerometer_prompt"
    	    android:layout_alignParentLeft="true"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="10dp"
    	    />
    	<Spinner
    	    android:id="@+id/accelerometer_sensitivity_spinner"
    	    android:layout_alignParentRight="true"
    	    android:prompt="@string/accelerometer_prompt"
    	    android:entries="@array/accelerometer_sensitivity"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	/>

    	<TextView 
    	    android:id="@+id/camera_prompt"
    	    android:text="@string/camera_prompt"
    	    android:layout_alignParentLeft="true"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="10dp"
    	    />
    	<Spinner
    	    android:id="@+id/camera_spinner"
    	    android:layout_alignParentRight="true"
    	    android:prompt="@string/camera_prompt"
    	    android:entries="@array/select_camera"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	/>
    	<TextView 
    	    android:id="@+id/camera_sensitivity_prompt"
    	    android:text="@string/camera_sensitivity"
    	    android:layout_alignParentLeft="true"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="10dp"
    	  	android:layout_below="@id/camera_prompt"
    	/>
    	<Spinner
    	    android:id="@+id/camera_sensitivity_spinner"
    	    android:layout_alignParentRight="true"
    	    android:layout_below="@id/camera_sensitivity_prompt"
    	    android:prompt="@string/accelerometer_prompt"
    	    android:entries="@array/accelerometer_sensitivity"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	/>
    	    
		<TextView
    	    android:id="@+id/microphone_prompt"
    	    android:text="@string/microphone_sensitivity"
    	    android:layout_alignParentLeft="true"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="10dp"
    	    />
    	<Spinner
    	    android:id="@+id/microphone_sensitivity_spinner"
    	    android:layout_alignParentRight="true"
    	    android:prompt="@string/microphone_sensitivity"
    	    android:entries="@array/accelerometer_sensitivity"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	/>
    	    

	<CheckBox
	    android:id="@+id/sms_check"
     	android:text="@string/sms_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:context=".StartActivity" />

    	<EditText
    	    android:id="@+id/phone_number"
    	    android:hint="@string/sms_hint"
    	    android:inputType="phone"
    	    android:layout_centerHorizontal="true"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:paddingTop="10dp"
    	    />



	<Button 
	    android:id="@+id/start_button"
	    android:text="@string/start_button"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"/>

</LinearLayout>
</ScrollView>